# CoralReefBackend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
reef/: .env.example  config.py  exceptions.py  run.py  settings.toml
reef/api/: __init__.py  _depends.py  blocks.py  cameras.py  deployments.py  events.py  gateways.py  ml_models.py  proxy.py  roboflow.py  statics.py  users.py  workflow_template.py  workflows.py  workspaces.py
reef/core/: blocks.py  cameras.py  deployments.py  events.py  gateways.py  ml_models.py  proxy.py  statics.py  users.py  workflow_template.py  workflows.py  workspaces.py
reef/models/: __init__.py  blocks.py  cameras.py  deployments.py  events.py  gateways.py  metrics.py  ml_models.py  users.py  workflow_template.py  workflows.py  workspaces.py
reef/schemas/: __init__.py  blocks.py  cameras.py  deployments.py  events.py  gateways.py  ml_models.py  proxy.py  users.py  workflow_template.py  workflows.py  workspaces.py
reef/templates/: workflow_nodes.py
reef/utlis/: _utils.py  cache.py  cloud.py  monitor.py  pipeline.py  roboflow.py  webrtc.py
reef/utlis/convert/: onnx2rknn.py
