[tool.poetry]
name = "coral-reef"
version = "0.1.0"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.12"
dynaconf = "^3.2.6"
beanie = "^1.27.0"
loguru = "*"
inference-sdk = "^0.24.0"
asyncer = "^0.0.8"
passlib = "^1.7.4"
fastapi-users = {extras = ["beanie", "oauth"], version = "^14.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
